# nwkit

./: .gitattributes  .gitignore  CHANGELOG.md  CLI_TSV_CONVENTIONS.md  MANIFEST.in  README.md  RELEASING.md  THIRD_PARTY_NOTICES  pyproject.toml  setup.py
.github/workflows/: nwkit-ci.yml  nwkit-smoke.yml  release.yml  tag_from_version.yml.disabled  tests.yml
ci/: environment.yml  nwkit_smoke.sh
data/: OG0001999.dated.pruned.nwk  generax.nhx
nwkit/: __init__.py  __main__.py  _mad.py  annotate.py  asr.py  clade_mapping.py  cladefreq.py  cli.py  collapse.py  compose.py  consensus.py  constrain.py  conventions.py  diff.py  dist.py  draw.py  drop.py  fasta.py  image.py  info.py  intersection.py  label.py  mark.py  mcmctree.py  monophyly.py  nhx2nwk.py  nwk2table.py  nwkit  printlabel.py  provenance.py  prune.py  rename.py  rescale.py  root.py  sample.py  sanitize.py  shuffle.py  skim.py  species_parser.py  subtree.py  (+4 more)
nwkit/data_tree/: apgiv.nwk
paper/: README.md  author_metadata_sources.md  claims.tsv  cover_letter.md  deposit_metadata.md  manuscript.md  outline.md  positioning.md  published_uses.tsv  references.bib  submission_metadata.md  submission_readiness.md  supplement.md  table1.md
paper/analysis/: README.md  benchmark.py  build_archives.py  build_documents.py  environment.yml  (+9 more)
tests/: conftest.py  helpers.py  test.drop.sh  test_annotate.py  test_asr.py  test_clade_mapping.py  test_cladefreq.py  test_cli.py  test_collapse.py  test_compose.py  test_consensus.py  test_constrain.py  test_diff.py  test_dist.py  test_draw.py  test_drop.py  test_fasta.py  test_image.py  test_info.py  test_interface_conventions.py  test_intersection.py  test_label.py  test_mark.py  test_mcmctree.py  test_monophyly.py  test_nhx2nwk.py  test_nwk2table.py  test_printlabel.py  test_provenance.py  test_prune.py  test_refactor_validation.py  test_rename.py  test_rescale.py  test_root.py  test_sample.py  test_sanitize.py  test_shuffle.py  test_skim.py  test_subtree.py  test_table2nwk.py  (+5 more)
(+20 files in other folders)
