[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nwkit"
dynamic = ["version"]
description = "Tools for processing Newick trees"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES"]
authors = [
  {name = "Kenji Fukushima", email = "kfuku52@gmail.com"},
]
keywords = ["phylogenetics", "newick", "tree"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "ete4>=4.4.0",
  "pandas",
  "requests",
  "numpy",
  "scipy",
  "matplotlib",
]

[project.optional-dependencies]
test = ["pytest>=7"]
image = ["Pillow", "CairoSVG"]
dev = [
  "build>=1.3",
  "check-wheel-contents>=0.6",
  "pytest>=7",
  "ruff>=0.15",
  "twine>=6",
]

[project.scripts]
nwkit = "nwkit.cli:main"

[project.urls]
Homepage = "https://github.com/kfuku52/nwkit"
Documentation = "https://github.com/kfuku52/nwkit/wiki"
Repository = "https://github.com/kfuku52/nwkit.git"
Issues = "https://github.com/kfuku52/nwkit/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "nwkit.__version__"}

[tool.setuptools.packages.find]
include = ["nwkit"]
namespaces = false

[tool.setuptools.package-data]
nwkit = ["data_tree/*.nwk"]

[tool.ruff]
target-version = "py310"
exclude = ["nwkit/_mad.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E741"]
